--- a/index.html
+++ b/index.html
@@ -55,19 +55,25 @@
         padding-left: 20px;
     }
     .text-output button + button {
-        margin-left: 10px;
+        margin-top: 10px;
     }
     .text-output input {
+        max-width: 300px;
+        width: 50%;
         padding: 5px;
-        margin-right: 10px;
+        margin-bottom: 10px;
         font-size: 16px;
     }
+    .text-output__email,
     .text-output__phone {
         margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
     }
     button {
         padding: 5px;
         width: 80px;
+        margin-left: 10px;
     }
     .text {
         margin-bottom: 5px;
@@ -91,9 +97,9 @@
         </div>
         <div class="text-output__email">
             <p class="text index-of-mail">Vị trí của mail: <span>0</span></p>
-                <input class="mail" type="text">
-                <button class="copy-of-mail">Copy</button>
-                <button class="next-of-mail">Next</button>
+            <input class="mail" type="text">
+            <button class="copy-of-mail">Copy</button>
+            <button class="next-of-mail">Next</button>
             </div>
         </div>
     </div>
