--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         margin-top: 10px;
     }
     .text-output input {
-        max-width: 300px;
+        max-width: 400px;
         width: 50%;
         padding: 5px;
         margin-bottom: 10px;
@@ -69,12 +69,16 @@
         margin-bottom: 10px;
         display: flex;
         flex-direction: column;
-        
+
     }
     button {
-        padding: 5px;
-        width: 80px;
+        padding: 10px 5px;
+        width: 100px;
         margin-left: 10px;
+        font-size: 16px;
+    }
+    textarea {
+        font-size: 16px;
     }
     .text {
         margin-bottom: 5px;
